--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only ./server/server.ts",
-    "start": "node dist/server/server.js",
+    "start": "ts-node ./Server/server.ts",
     "build": "npx tsc"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/passport": "^1.0.13",
     "@types/sequelize": "^4.28.15",
     "jest": "^29.7.0",
     "prettier": "^2.8.3",
@@ -25,14 +26,22 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
-
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.0",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   }
