--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
