--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only ./server/server.ts",
-    "start": "node ./Server/server.js",
+    "start": "ts-node Server/src/server.ts",
     "build": "npx tsc"
   },
   "author": "",
@@ -16,10 +16,11 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/express-session": "^1.17.8",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^20.8.6",
     "@types/passport": "^1.0.13",
-    "@types/sequelize": "^4.28.15",
     "jest": "^29.7.0",
     "prettier": "^2.8.3",
     "ts-jest": "^29.1.1",
@@ -28,6 +29,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport-google-oauth20": "^2.0.12",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
