--- a/Server/package.json
+++ b/Server/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "dev": "ts-node-dev --respawn --transpile-only ./server/server.ts",
-    "start": "ts-node Server/src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "start": "ts-node ./src/server.ts",
     "build": "npx tsc"
   },
   "author": "",
@@ -42,11 +42,12 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.1",
+    "mongoose": "^7.6.2",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   }
