--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "wouter": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
