--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.4",
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "@types/express-session": "^1.17.8",
@@ -34,6 +35,7 @@
     "@types/passport-google-oauth20": "^2.0.12",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -41,12 +43,15 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
+    "mongoose-findorcreate": "^4.0.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
