--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^5.3.4",
+    "socket.io-client": "^4.7.2",
     "wouter": "^2.12.0"
   },
   "devDependencies": {
