--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,4 @@
-PORT = 8080
-NODE_ENV = development
-MONGO_LOCAL=mongodb://localhost:27017/your_db_name
-MONGO_PROD= mongodb://localhost:27017/your_db_name
-GOOGLE_CLIENT_ID = "72365737421-4vob7i0jok1j6drm83jdklb260i4njbi.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET = "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"
+PORT = 3001 
+MONGO_URI= mongodb+srv://User:1234@todolist.x8ilx1a.mongodb.net/Chat?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID=72365737421-6chsiivuem3to740gtbeep4b4gtr75eg.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
