--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "start": "ts-node ./src/server.ts",
+    "start": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "build": "npx tsc"
   },
   "author": "",
@@ -20,10 +20,14 @@
     "@types/express-session": "^1.17.8",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.6",
     "@types/passport": "^1.0.13",
+    "@types/supertest": "^2.0.15",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.0.1",
     "prettier": "^2.8.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -31,7 +35,6 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/mongoose": "^5.11.97",
     "@types/passport-google-oauth20": "^2.0.12",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
